<resources>
    <string name="app_name">Facilis</string>
    <string name="faded_card">Faded card</string>
    <string name="card_index">Card %1$d</string>
    <string name="add_new_card">Add new Card</string>
    <string name="remove_this_card">Remove this Card</string>
    <string name="drag_handle">Drag handle</string>
    <string name="card_with_list">Card With List Example</string>
    <string name="plain_card">Plain Card example</string>
    <string name="list_of_cards">List of cards example</string>
    <string name="blur_popup_float_up">Blur Popup with float animation</string>
    <string name="blur_popup_zoom">Blur Popup with zoom animation</string>
    <string name="blur_popup_long_press">Long press Popup example</string>
    <string name="demo_background">Demo background</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="this_is_a_sample_plain_card_fragment">This is a sample plain card fragment</string>
    <string name="you_can_swipe_down_from_anywhere_inside_to_dismiss_this_card">You can swipe down from anywhere inside to dismiss this card</string>
    <string name="card_item_">Card Item %1$d</string>
    <string name="this_is_a_card_fragment_with_a_recyclerview">This is a card fragment with a recyclerView, index %1$d</string>
    <string name="card_with_list_implementation">It contains a basic implementation of recyclerView, you can swipe down form the top to dismiss this fragment.</string>
    <string name="list_of_cards_implementation">It contains an implementation of horizontal ViewPager, which has cards as children.\n\nYou can swipe down from the top of any card to dismiss all.</string>
    <string name="this_is_a_sample_blur_popup">This is a sample blur popup</string>
    <string name="blur_popup_implementation">You can swipe down from the top of any card to dismiss all.\nOr you can click outside, on the blurred area to dismiss this popup.</string>
    <string name="click_to_open_another_card_with_list">Click to open another Card with list</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Fusce ornarevestibulum erat sagittis sollicitudin.
        Morbi varius eros eget velit congue finibus.
        Etiam accumsan est augue, vel blandit mauris is a nu pretium malesuada.
    </string>
</resources>
