<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootFadedCardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/fadedCard"
            style="@style/CardView.Faded"
            android:visibility="gone" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/rootCard"
        style="@style/CardView.Custom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dragHandle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/drag_handle"
                android:drawableTop="@drawable/drag_handle_dark" />

            <TextView
                android:id="@+id/indexTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dragHandle"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/card_index" />

            <Button
                android:id="@+id/addFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indexTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/add_new_card" />

            <Button
                android:id="@+id/removeFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addFragmentButton"
                android:layout_centerHorizontal="true"
                android:text="@string/remove_this_card" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
