<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentMatchParent"
    android:fitsSystemWindows="true"
    tools:context="com.prembros.facilis.implementation.SelectionActivity">

    <com.google.android.material.appbar.AppBarLayout style="@style/MatchParentWrapContent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/MatchParentWrapContent"
            app:contentInsetEnd="16dp"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:title="@string/scrollview_implementation"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        style="@style/MatchParentMatchParent"
        android:clipToPadding="false"
        android:paddingTop="80dp"
        android:paddingBottom="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/MatchParentWrapContent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWithListBtn"
                style="@style/MatchParentWrapContent"
                app:cardBackgroundColor="@color/faded_red"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/card_with_list"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/listOfCardsBtn"
                style="@style/MatchParentWrapContent"
                app:cardBackgroundColor="@color/cornflower_blue"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/list_of_cards"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/plainCardBtn"
                style="@style/MatchParentWrapContent"
                android:layout_margin="14dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/plain_card"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                style="@style/MatchParentWrapContent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/blurPopupZoomBtn"
                    style="@style/WrapContentWrapContent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ripple_light_rect_curved_corners"
                    app:cardBackgroundColor="@color/crusoe"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/blur_popup_zoom"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/blurPopupFloatUpBtn"
                    style="@style/WrapContentWrapContent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ripple_light_rect_curved_corners"
                    app:cardBackgroundColor="@color/maire"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/blur_popup_float_up"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/longPressBlurPopupBtn"
                style="@style/MatchParentWrapContent"
                app:cardBackgroundColor="@color/husk"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/blur_popup_long_press"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        style="@style/MatchParentMatchParent"
        android:elevation="9dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
